excited to finish my firt ever website

--- a/index.html
+++ b/index.html
@@ -8,17 +8,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <section>
+     <section class="top-banner">
             <div class="half-width">
-                    <h1>Welcome to</h1>
-                <h1><span class="name-highlight">Rasel</span> Website</h1>
-                <h3>World-Class Professinal Dev</h3>
-                <p>amar sonar bangla ami tomai bhalobashi chirodin tomar akash tomar batash amar prane o ma amar pranne bajai bashi sonar bangla ami tomai bhalobashi.o ma fagune tor amer bone gane pagol kore mori hai hai re o ma fagune tor amer bone gane pagol kore</p>
+                            <h1>Welcome to</h1>
+                        <h1><span class="orange-highlight">Rasel</span> Website</h1>
+                        <h3>World-Class Professinal Dev</h3>
+                        <p>amar sonar bangla ami tomai bhalobashi chirodin tomar akash tomar batash amar prane o ma amar pranne bajai bashi sonar bangla ami tomai bhalobashi.o ma fagune tor amer bone gane pagol kore mori hai hai re o ma fagune tor amer bone gane pagol kore</p>
+                        <a class="link-button" target="_blank" href="www.facebook.com">HIRE ME</a>
             </div>
             <div class="half-width">
                 <img src="images/profile.png.png" alt="">
             </div>
      </section>
+     <section class="dream-area">
+         <div class="half-width">
+             <img src="images/profile3.png.png" alt="">
+
+         </div>
+         <div class="half-width">
+             <h2>Big Dream</h2>
+             <h3>Become World,s No.1 Developer</h3>
+             <p>hoteo pare ei dekhai sesh dekha hoteo pare ei gaani sesh gan ,dukkho amar sathei ase tobu dekho dukhi ami noito dak diye jai pronoy melai etei niye to shukh hoito,kisher eto dukkho tomar sarakkhon bose bose vabso</p>
+             <a class="link-button" target="_blank" href="www.gmail.com">DOWNLOAD RESUME</a>
+
+         </div>
+
+     </section>
+     <section class="experience-area">
+                 <h2>Experiences</h2>
+         <div id="full-stack" class="half-width single-experience">
+                
+                <h2>Full Stack Web Dev</h2>
+                <h3 class="orange-highlight">2021 - present | pro level web dev</h3>
+                <p>qwer yyio fuy iocv sd iosydfuhzxi izc i isuud  idcy i isdyfi zxysiady isdf iiusdyfisy isd  zuixc isdty zxi cisyicuy  isf </p>
+         </div>
+         <div id="baby-web"class="half-width single-experience">
+                <h2>Baby web developer</h2>
+                <h3 class="orange-highlight">2020-2021 | programming hero learner</h3>
+                <p>sdfh xcuhvidu uisdfysi iucvyhiuxd iuvyhi iscvhisysd89 sd8yf 9s duifyo9 sdfy89d i9dsvy yv7y9sd 9sdfy9y sid y98 ixucv 9sf y s9</p>
+
+         </div>
+
+     </section>
+     <footer>
+         <p>@Rasel 2021, all right reserved </p>
+     </footer>
 </body>
 
 </html>
